fixed mobile layout issue

--- a/memories/styles/base.css
+++ b/memories/styles/base.css
@@ -12,6 +12,7 @@ body {
     font-family: var(--font-family);
     background-color: var(--background-accent);
     text-align: center;
+    width: 100%;
 }
 
 .navLinks {
