--- a/styles/project-base.css
+++ b/styles/project-base.css
@@ -9,6 +9,7 @@
 body {
     font-family: var(--font-family);
     background-color: var(--background-accent);
+    width: 100%;
   }
 header {
     background-color: var(--background-color);
